# Observal

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  renovate.json
.claude/: settings.json
.github/workflows/: ci.yml  deploy.yml  release.yml
demo/: README.md  kiro_agent.json  run_demo.sh  test_all_types.sh
docker/: Dockerfile.api  docker-compose.yml  entrypoint.sh  nginx.conf  nginx.production.conf
docs/: ROADMAP.md  cli.md  design-new-registry-types.md  e2e-test-checklist-enterprise.md  e2e-test-checklist.md  eval.md  submission-and-install-guide.md  telemetry-log-collection-spec.md  telemetry-overhaul.md
docs/getting-started/: installation.md  quickstart.md
docs/self-hosting/: docker-compose.md  requirements.md
docs/superpowers/specs/: mcp-standardization-spec.md
ee/: __init__.py
ee/docs/: saml-setup.md  scim-setup.md
ee/observal_server/routes/: scim.py  sso_saml.py
observal-server/: config.py  database.py  main.py  pyproject.toml  worker.py
observal-server/alembic/versions/: 0010_add_username_to_users.py
observal-server/api/: deps.py  graphql.py  ratelimit.py
observal-server/api/middleware/: request_id.py
observal-server/api/routes/: admin.py  agent.py  alert.py  auth.py  bulk.py  component_source.py  config.py  dashboard.py  eval.py  feedback.py  graphrag.py  hook.py  keys.py  mcp.py  otel_dashboard.py  otlp.py  prompt.py  review.py  sandbox.py  scan.py  skill.py  telemetry.py  tool.py
observal-server/models/: eval.py  exporter_config.py  organization.py  scoring.py  user.py
observal-server/schemas/: admin.py  agent.py  auth.py  bulk.py  constants.py  dashboard.py  hook.py  mcp.py  prompt.py  sandbox.py  skill.py
observal-server/services/: agent_builder.py  agent_config_generator.py  cache.py  clickhouse.py  config_generator.py  crypto.py  eval_engine.py  eval_service.py  eval_watchdog.py  git_mirror_service.py  graphrag_config_generator.py  hook_materializer.py  redis.py  sandbox_config_generator.py  score_aggregator.py  skill_config_generator.py  structural_scorer.py  tool_config_generator.py
observal-server/services/eval/: eval_engine.py  eval_service.py  ragas_eval.py  slm_scorer.py
observal_cli/: cmd_agent.py  cmd_auth.py  cmd_mcp.py  cmd_ops.py  cmd_pull.py  cmd_scan.py  cmd_uninstall.py  config.py  constants.py  graphrag_proxy.py  hooks_spec.py  main.py  render.py  sandbox_runner.py  shim.py
observal_cli/hooks/: kiro_hook.py  kiro_stop_hook.py  observal-hook.sh  observal-stop-hook.sh
scripts/: seed_test_skill.py
tests/: test_agent_composition.py  test_agent_review.py  test_bulk.py  test_bundles.py  test_clickhouse_phase1.py  test_clickhouse_retention.py  test_constants_sync.py  test_draft_workflow.py  test_endpoint_discovery.py  test_env_detection_and_config.py  test_eval_completeness.py  test_eval_phase8.py  test_graphql_phase6.py  test_health.py  test_ide_config_e2e.py  test_ingest_phase2.py  test_payload_crypto.py  test_proxy_phase4.py  test_pull_and_agent_cli.py  test_registry_types.py  test_saml_scim_integration.py  test_schema_redesign.py  test_settings_reconciler.py  test_shim_phase3.py  test_skill_config_generator.py  test_structural_scorer.py  test_telemetry_collection.py  test_uninstall_windows.py  test_worker_phase5.py
tests/eval/: test_eval_phase8.py
web/: next.config.ts  package.json  pnpm-lock.yaml
web/e2e/: unarchive-agent.spec.ts
web/src/app/: globals.css  providers.tsx
web/src/app/(admin)/: layout.tsx
web/src/app/(admin)/errors/: page.tsx
web/src/app/(admin)/review/: page.tsx
web/src/app/(admin)/settings/: page.tsx
web/src/app/(admin)/traces/: page.tsx
web/src/app/(admin)/traces/[id]/: page.tsx
web/src/app/(admin)/users/: page.tsx
web/src/app/(auth)/device/: page.tsx
web/src/app/(auth)/login/: page.tsx
web/src/app/(registry)/: page.tsx
web/src/app/(registry)/agents/: page.tsx
web/src/app/(registry)/components/: page.tsx
web/src/app/(user)/account/: page.tsx
web/src/components/dashboard/: session-dag.tsx
web/src/components/layouts/: admin-guard.tsx  auth-guard.tsx
web/src/components/nav/: registry-sidebar.tsx
web/src/components/registry/: agent-card.tsx  pull-command.tsx
web/src/components/review/: review-detail-sheet.tsx  validation-badges.tsx
web/src/components/ui/: checkbox.tsx  theme-switcher.tsx
web/src/hooks/: use-admin-guard.ts  use-api.ts  use-auth.ts  use-role-guard.ts
web/src/lib/: api.ts  ide-features.ts  types.ts
(+3 files in other folders)
