[project]
name = "observal-cli"
version = "0.1.0"
description = "Observal MCP Server Registry CLI"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "typer",
    "httpx",
    "rich",
    "docker",
]

[project.scripts]
observal = "observal_cli.main:app"
observal-shim = "observal_cli.shim:main"
observal-proxy = "observal_cli.proxy:main"
observal-sandbox-run = "observal_cli.sandbox_runner:main"
observal-graphrag-proxy = "observal_cli.graphrag_proxy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ── Ruff ─────────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["observal_cli", "observal-server", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (typer needs this)
    "UP007",  # use X | Y for union (keep Optional for typer compat)
    "N805",   # first argument of a method should be named self (pydantic validators)
    "B904",   # raise from in except (too noisy for HTTPException patterns)
    "SIM105", # contextlib.suppress (explicit try/except is clearer for us)
    "UP042",  # str enum inheritance (needed for SQLAlchemy compatibility)
    "RUF012", # mutable class defaults (pydantic/sqlalchemy models)
]

[tool.ruff.lint.isort]
known-first-party = ["observal_cli", "models", "schemas", "services", "api"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841", "RUF059", "B007"]  # unused vars common in test assertions
"observal_cli/main.py" = ["E402"]       # imports after app = typer.Typer()
"demo/*" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Pytest ───────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
