[project]
name = "observal-server"
version = "0.1.0"
description = "Observal API server"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "email-validator",
    "alembic",
    "httpx",
    "gitpython",
    "boto3",
    "redis[hiredis]",
    "arq",
    "strawberry-graphql[fastapi]>=0.314.0",
    "authlib>=1.6.11",
    "itsdangerous",
    "cryptography>=43.0.0",
    "cffi",
    "slowapi",
    "PyJWT>=2.8.0",
    "aiosqlite>=0.22.1",
    "tenacity>=8.0.0",
    "python-multipart>=0.0.26",
    "mako>=1.3.11",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
