[project]
name = "observal-server"
version = "0.1.0"
description = "Observal API server"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "email-validator",
    "alembic",
    "httpx",
    "gitpython",
    "boto3",
    "redis[hiredis]",
    "arq",
    "strawberry-graphql[fastapi]>=0.314.0",
    "authlib>=1.6.11",
    "itsdangerous",
    "cryptography>=44.0.0",
    "python3-saml>=1.16.0",
    "cffi",
    "slowapi",
    "PyJWT>=2.8.0",
    "aiosqlite>=0.22.1",
    "tenacity>=8.0.0",
    "python-multipart>=0.0.26",
    "fastapi-cache2[redis]>=0.2.2",
    "jinja2>=3.1.0",
    "mako>=1.3.11",
    "structlog>=24.1.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pyyaml",
    "typer",
    "rich",
]
